Add helpful warning message for long URLs
Problem:
- Yellow highlight drew attention but didn't explain WHY
- Users didn't know WHAT to do about long URLs

Solution:
- Added warning message below URL field when length > 50 chars
- Message: "URL seems a bit long. Try shortening it to get an easier-to-scan QR code."
- Shows/hides automatically based on URL length
- Includes warning icon (triangle with exclamation mark)

Visual Design:
- Same yellow/orange color scheme as input highlight
- Left border accent for emphasis
- Flexbox layout with icon and text
- Clean, professional appearance

Implementation:
- popup.html: Added #urlLengthWarning element with SVG icon
- popup.js: Updated checkUrlLength() to show/hide warning
- popup.css: Styled .url-warning with matching colors
- popup.css: Added .url-warning.hidden rule (critical fix)
- locales: Added translations in English and German

Bug Fix:
- Fixed critical issue where warning would always show
- Added .url-warning.hidden { display: none; } rule
- Without this, the "hidden" class wouldn't actually hide it

This gives users clear, actionable guidance on what the
yellow highlight means and what they should do about it.

--- a/popup.html
+++ b/popup.html
@@ -87,6 +87,12 @@
           <label for="productUrl" data-i18n="popup.editState.urlLabel">Product URL</label>
           <input type="text" id="productUrl" placeholder="https://...">
           <small class="text-muted" data-i18n="popup.editState.urlHint">URL for QR code (automatically shortened, can be manually adjusted)</small>
+          <small id="urlLengthWarning" class="url-warning hidden">
+            <svg width="14" height="14" viewBox="0 0 16 16" fill="currentColor">
+              <path d="M8.982 1.566a1.13 1.13 0 0 0-1.96 0L.165 13.233c-.457.778.091 1.767.98 1.767h13.713c.889 0 1.438-.99.98-1.767L8.982 1.566zM8 5c.535 0 .954.462.9.995l-.35 3.507a.552.552 0 0 1-1.1 0L7.1 5.995A.905.905 0 0 1 8 5zm.002 6a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
+            </svg>
+            <span data-i18n="popup.editState.urlWarning">URL seems a bit long. Try shortening it to get an easier-to-scan QR code.</span>
+          </small>
         </div>
 
         <div class="form-row">
