--- a/options.html
+++ b/options.html
@@ -50,6 +50,17 @@
             </small>
           </div>
 
+          <div class="form-group">
+            <label for="customInstructions" data-i18n="options.customInstructionsLabel">Custom Instructions (Optional)</label>
+            <textarea
+              id="customInstructions"
+              rows="4"
+              data-i18n-placeholder="options.customInstructionsPlaceholder"
+              placeholder="e.g., Always include the supplier's name in German..."
+            ></textarea>
+            <small class="help-text" data-i18n="options.customInstructionsHint">Add custom instructions to guide the AI. These will be included in every extraction. You can specify domain-specific rules by starting a line with the domain (e.g., "amazon.de: Use German product names").</small>
+          </div>
+
           <div class="form-actions">
             <button type="button" id="testBtn" class="btn-secondary">
               <svg width="16" height="16" viewBox="0 0 16 16" fill="currentColor">
